<resources>
    <string name="app_name">MVVM-DataBinding-Demo</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="address">Address</string>

    <string name="add_model">ADD DATA</string>
    <string name="edit_model">EDIT DATA</string>
    <string name="no_items">No Items. Click on \"+\" button to add items</string>
</resources>
